rns-lang/tests/snapshots/err-parser-outside_class_directive-dot_annotation.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.annotation actually can't be here
.class public HelloWorld

.end method
----- STDOUT -----

----- STDERR -----
Error: unexpected directive before class definition
   ╭─[ test_data/integration/err/parser/outside_class_directive/dot_annotation.ja:1:1 ]
   │
 1 │ .annotation actually can't be here
   │ ─────┬─────  
   │      ╰─────── '.annotation' is only allowed inside a class or method definition
   │ 
   │ Note: All assembly code must be placed inside a class definition starting with '.class'.
───╯
